fix: Improved UI responsiveness and readability

--- a/client/src/containers/ItemEditor/ItemEditor.scss
+++ b/client/src/containers/ItemEditor/ItemEditor.scss
@@ -32,13 +32,7 @@
 }
 
 .lyrics-editor-middle {
-  // Subtracting top and bottom sections and bottom margin and gap
-  height: calc(
-    100% - 2rem - 4rem - clamp(0.25rem, 0.5vw, 0.5rem) -
-      clamp(0.25rem, 0.5vw, 0.5rem)
-  );
-
-  @apply flex flex-1 gap-4;
+  @apply flex flex-1 gap-4 min-h-0;
 }
 
 .song-section-select {
